// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit Tests - User Resolver Should create a user 1`] = `
Object {
  "accessToken": "fakeaccesstoken",
  "user": Object {
    "birthDate": 1999-06-12T00:00:00.000Z,
    "cpf": "44444444444",
    "email": "test@gmail.com",
    "id": "123",
    "isActive": true,
    "name": "Tester",
  },
}
`;

exports[`Unit Tests - User Resolver Should find user by id 1`] = `
Object {
  "birthDate": 1999-06-12T00:00:00.000Z,
  "cpf": "44444444444",
  "email": "test@gmail.com",
  "id": "123",
  "isActive": true,
  "name": "Tester",
}
`;

exports[`Unit Tests - User Resolver Should list all users 1`] = `
Object {
  "users": Array [
    Object {
      "birthDate": 1999-06-12T00:00:00.000Z,
      "cpf": "44444444444",
      "email": "test@gmail.com",
      "id": "123",
      "isActive": true,
      "name": "Tester",
    },
    Object {
      "birthDate": 1999-06-12T00:00:00.000Z,
      "cpf": "44444444444",
      "email": "test@gmail.com",
      "id": "456",
      "isActive": true,
      "name": "Tester",
    },
  ],
}
`;
